View Issue Details

IDProjectCategoryView StatusLast Update
0030149CommunityOCCT:Meshpublic2019-03-11 14:02
Reporterkosik Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2015 
Product Version6.7.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030149: BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items
DescriptionI have created a body in FreeCAD
(see the attached "comb_bug.step" file).

When I open this file in an application that uses OpenCascade (e.g. FreeCAD),
the body is not rendered well.

Relevant files (FreeCAD-file, step-file, screenshot):

  http://matej-kosik.net/tmp/open_cascade_bugreport_20180920/


I've placed relevant files
Steps To Reproducestepread [locate_data_file comb_bug.step] a *
incmesh a_1 1
tricheck a_1
TagsNo tags attached.
Test case numberbugs mesh bug30149

Attached Files

  • comb_bug.step (33,965 bytes)

Activities

kosik

2018-09-20 18:47

reporter  

comb_bug.step (33,965 bytes)

BenjaminBihler

2018-09-21 11:38

developer   ~0079306

The same strange display happens also on my computer.

CATIA displays the STEP file without these two grey triangles shining through.

kgv

2019-03-03 00:02

developer   ~0082541

This is a regression since OCCT 6.7.0.

git

2019-03-04 14:02

administrator   ~0082580

Branch CR30149 has been created by oan.

SHA-1: 65270a697812b2f01eea09c0b8822260c63db56d


Detailed log of new commits:

Author: oan
Date: Mon Mar 4 13:16:18 2019 +0300

    0030149: BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items
    
    Added new method BRepMesh_Delaun::superCleanup() intended to remove all triangles over free links remaining connected to elements of super triangle.

git

2019-03-06 14:35

administrator   ~0082733

Branch CR30149_1 has been created by oan.

SHA-1: 5cde1fb28a73a02e74d243cd95b7e342880b45d5


Detailed log of new commits:

Author: oan
Date: Wed Mar 6 14:29:57 2019 +0300

    0030149: BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items
    
    Remove free triangles connected to triangles over nodes of super triangle.

git

2019-03-06 15:27

administrator   ~0082741

Branch CR30149_1 has been updated forcibly by oan.

SHA-1: e2210c6a51dbf7defcd7012a2853022d7bc3c453

git

2019-03-06 17:24

administrator   ~0082747

Branch CR30149_1 has been updated forcibly by oan.

SHA-1: 5431ac662067fc67816280a88154710e8c9a8e7d

oan

2019-03-06 17:26

developer   ~0082748

Dear Mikhail,

could you please review the patch located in CR30149_1.

Test reports are available at:
http://occt-tests/CR30149-master-OAN-OCCT/Windows-64-VC14/diff_summary.html
http://occt-tests/CR30149-master-OAN-OCCT/Debian80-64/diff_summary.html

msv

2019-03-07 13:12

developer   ~0082763

Update test mesh standard_shading U5.

Please explain the difference:
IMAGE bugs modalg_2 bug21060: bug21060.png differs

oan

2019-03-07 13:20

developer   ~0082765

Mikhail,

"mesh standard_shading U5" has already been updated and put in the branch.

As for "bugs modalg_2 bug21060", it is shape with self-intersections, so any incorrect modification of incorrect use case if not sufficient, IMHO.

But generally, it seems that last modification just prevents removing of some triangles by removing of seed triangle.

msv

2019-03-07 13:25

developer   ~0082766

Reviewed.

apn

2019-03-07 13:51

administrator   ~0082770

Combination -
OCCT branch : CR30149_1
master SHA - e2210c6a51dbf7defcd7012a2853022d7bc3c453
d67d4b811012eef8913d3c535c29654d0acf3c4c
Products branch : master SHA - 50f65bc5ba4d0133f24f5e5850620f39f60a9163
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16566.540000000034 / 16562.049999999996 [+0.03%]
Products
Total CPU difference: 9075.800000000028 / 9082.700000000026 [-0.08%]
Windows-64-VC14:
OCCT
Total CPU difference: 17972.390625 / 17955.015625 [+0.10%]
Products
Total CPU difference: 10478.875 / 10469.015625 [+0.09%]

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-03-11 14:01

administrator   ~0082819

Branch CR30149_1 has been deleted by inv.

SHA-1: 5431ac662067fc67816280a88154710e8c9a8e7d

git

2019-03-11 14:02

administrator   ~0082827

Branch CR30149 has been deleted by inv.

SHA-1: 65270a697812b2f01eea09c0b8822260c63db56d

Related Changesets

occt: master 060fc603

2019-03-06 11:29:57

oan


Committer: apn Details Diff
0030149: BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items

Remove free triangles connected to triangles over nodes of super triangle.
Modification of improved test case.
Affected Issues
0030149
mod - src/BRepMesh/BRepMesh_Delaun.cxx Diff File
add - tests/bugs/mesh/bug30149 Diff File
mod - tests/mesh/data/standard/U5 Diff File

Issue History

Date Modified Username Field Change
2018-09-20 18:47 kosik New Issue
2018-09-20 18:47 kosik Assigned To => mpv
2018-09-20 18:47 kosik File Added: comb_bug.step
2018-09-21 09:41 mpv Assigned To mpv => gka
2018-09-21 09:41 mpv Category OCCT:Application Framework => OCCT:Data Exchange
2018-09-21 11:38 BenjaminBihler Note Added: 0079306
2019-03-02 23:55 kgv Assigned To gka => oan
2019-03-02 23:55 kgv Category OCCT:Data Exchange => OCCT:Mesh
2019-03-02 23:55 kgv Product Version => 7.3.0
2019-03-02 23:55 kgv Summary bug (?) in the rendering algorithm => Mesh - bug (?) in the rendering algorithm
2019-03-02 23:59 kgv Product Version 7.3.0 => 6.7.0
2019-03-02 23:59 kgv Target Version => 7.4.0
2019-03-03 00:02 kgv Note Added: 0082541
2019-03-04 13:06 oan Summary Mesh - bug (?) in the rendering algorithm => BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items
2019-03-04 14:02 git Note Added: 0082580
2019-03-06 14:35 git Note Added: 0082733
2019-03-06 15:27 git Note Added: 0082741
2019-03-06 17:24 git Note Added: 0082747
2019-03-06 17:26 oan Note Added: 0082748
2019-03-06 17:26 oan Assigned To oan => msv
2019-03-06 17:26 oan Status new => resolved
2019-03-06 17:26 oan Steps to Reproduce Updated
2019-03-07 13:12 msv Note Added: 0082763
2019-03-07 13:12 msv Assigned To msv => oan
2019-03-07 13:12 msv Status resolved => assigned
2019-03-07 13:20 oan Note Added: 0082765
2019-03-07 13:20 oan Assigned To oan => msv
2019-03-07 13:20 oan Status assigned => resolved
2019-03-07 13:25 msv Note Added: 0082766
2019-03-07 13:25 msv Assigned To msv => bugmaster
2019-03-07 13:25 msv Status resolved => reviewed
2019-03-07 13:51 apn Test case number => bugs mesh bug30149
2019-03-07 13:51 apn Note Added: 0082770
2019-03-07 13:51 apn Status reviewed => tested
2019-03-10 18:17 apn Changeset attached => occt master 060fc603
2019-03-10 18:17 apn Assigned To bugmaster => apn
2019-03-10 18:17 apn Status tested => verified
2019-03-10 18:17 apn Resolution open => fixed
2019-03-11 14:01 git Note Added: 0082819
2019-03-11 14:02 git Note Added: 0082827