0030149: BRepMesh_Delaun: free triangle is left in the mesh after cleanup of auxiliary items

Remove free triangles connected to triangles over nodes of super triangle.
Modification of improved test case.